<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:max="100"
        android:progress="1" />

    <RelativeLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/song_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/alizee" />

        <ImageView
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/next"
            app:srcCompat="@drawable/pause_circle"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/next"
            android:contentDescription="@string/play_pause" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_title"
            android:layout_toRightOf="@+id/song_cover"
            android:text="@string/artist_name"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/song_cover" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/next" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/song_cover"
            android:text="@string/song_name"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:layout_toEndOf="@+id/song_cover" />
    </RelativeLayout>

</RelativeLayout>